<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.quicknotesapp.note_form.FormViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_color">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="35dp"
            android:onClick="@{() -> viewModel.onBackPressed()}"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fragment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="13dp"
            android:text="@string/add_note_text"
            android:textColor="@color/secondary_color"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/note_title_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/note_text_label"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_title"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="20dp"
            app:cardBackgroundColor="@color/secondary_color"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/note_title_edit_text"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/add_note_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/secondary_color"
                android:padding="0dp"
                android:text="@string/add_btn"
                android:textColor="@color/main_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                tools:ignore="TouchTargetSizeCheck" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
